--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -41,7 +41,7 @@
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fab fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
       {% if author.medium %}
-        <li><a href="https://medium.com/{{ author.medium }}"><i class="fab fa-fw fa-medium-square" aria-hidden="true"></i> Medium</a></li>
+        <li><a href="{{ author.medium }}"><i class="fab fa-fw fa-medium" aria-hidden="true"></i> Medium</a></li>
       {% endif %}
       {% if author.facebook %}
         <li><a href="https://www.facebook.com/{{ author.facebook }}"><i class="fab fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
