--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,4 +30,9 @@ layout: compress
     {% include scripts.html %}
 
   </body>
+
+  <footer>
+    <p>© {{ site.time | date: '%Y' }} All rights reserved, created by Umair Akram</p>
+  </footer>
+  
 </html>
